@@ -45,6 +45,8 @@ xx0y2008 (v2.6.0) -** stable release **-
 		   and the 'ext-cmd-wave-editor' ecasoundrc field
 	- changed: emit a 'subsystem' level trace message when 
 	 	   engine state changes to finished
+	- changed: interactive mode - minor update to 'status' command
+	  	   output
 	- fixed: do not limit max-gain reported by '-ev' to [1,max]
 		 value range
         - fixed: avoid denormal numbers in '-ete' (leads to unusually
